@@ -157,7 +157,7 @@ entries with <B>MainFrame::setmenustate</B>.</LI>
 <LI><I>tearoff</I> specifies if menu has tearoff entry.</LI>
 <LI><I>description</I> specifies a string for <A HREF=\"DynamicHelp.html\">DynamicHelp</A>.</LI>
 <LI><I>accelerator</I> specifies a key sequence. It is a list of two elements, where the first
-is one of <B>Ctrl</B>, <B>Alt</B> or <B>CtrlAlt</B>, and the second as letter
+is one of <B>Shift</B>, <B>Ctrl</B>, <B>Alt</B>, <B>CtrlAlt</B>, <B>Cmd</B>,  or <B>ShiftCmd</B>, and the second as letter
 (see <A HREF="#-casesensitive">-casesensitive</A> option for interpretation),  digit or
 a special key name.
 An accelerator string is build and corresponding binding set on the toplevel to invoke the
