@@ -7,6 +7,9 @@
 	by new option -casesensitive.
 	Patch by cmard [Patch 1977644]
 	
+	* mainframe.tcl: Allow new modifiers Shift, Cmd and ShiftCmd
+	for accelerators. Patch by K.J.Nash [Patch-83ce3e84e7]
+	
 2013-01-09 Harald Oehlmann <oehhar@users.sourceforge.net>
 
 	* widget.tcl: Bug fixed:
